# dns-server

./: Cargo.toml
.github/workflows/: ci.yaml
src/: config.rs  data.rs  handler.rs  main.rs  resolver.rs  server.rs
src/data/: domain_name.rs  header.rs  mod.rs  record_type.rs  request.rs  response.rs  sizes.rs
